--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,12 @@
       "**/node_modules/**"
     ]
   },
+  "emulators": {
+    "hosting": {
+      "host": "localhost",
+      "port": "5554"
+    }
+  },
   "functions": {
     "ignore": [
       "node_modules",
